# voronoi

./: .gitignore  README.md  TODO.md  requirements.txt  setup.cfg  voronoi.py  voronoi_bu_1.py  voronoi_stipple.py
voronoi_stippler/: main.py
