[metadata]
name = voronoi_stippler
version = 1.0.0
description = Voronoi stippler.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/oprince-tech/voronoi_stippler
author = Oliver Prince
author_email = oprince.tech@gmail.com
license = MIT

[options]
packages = find:
install_requires =
    opencv-python==4.5.3.56
    numpy>=1.21.2
    scipy==1.7.1
python_requires = >=3.7
package_dir =
    = ./voronoi_stippler
setup_requires =
    wheel


[options.entry_points]
console_scripts =
    voronoi-stippler = voronoi_stippler.main:main


[mypy]
check_untyped_defs = true
disallow_untyped_defs = true
